--- a/charts/kaap/values.yaml
+++ b/charts/kaap/values.yaml
@@ -66,3 +66,23 @@ cluster:
       image: apachepulsar/pulsar-all:3.0.5
       storage:
         existingStorageClassName: default
+
+pulsarAdminConsole:
+  create: false
+  defaultTenant: public
+  serverLogLevel: info
+  apiVersion: "3.0.5"
+  repository: datastax/pulsar-admin-console
+  pullPolicy: IfNotPresent
+  tag: 2.2.0
+  replicaCount: 1
+  resources:
+    requests:
+      memory: 512Mi
+      cpu: 0.5
+  service:
+    type: ClusterIP
+    ports:
+    - name: http
+      port: 80
+      targetPort: "http"
