--- a/charts/nifi-registry/values.yaml
+++ b/charts/nifi-registry/values.yaml
@@ -156,6 +156,8 @@ certManager:
   # point browsers to access the NiFi Registry UI)
   additionalDnsNames:
     - localhost
+    - k8s.hydra.aws.platform.porsche.cloud
+    - k8s.private.hydra.aws.platform.porsche.cloud
   # Names of Kubernetes secrets containing ca.crt keys to add to the
   # NiFi Registry truststore (e.g. CAs of NiFi Registry clients)
   caSecrets:
