--- a/charts/aws-load-balancer/templates/rbac.yaml
+++ b/charts/aws-load-balancer/templates/rbac.yaml
@@ -86,6 +86,9 @@ rules:
 - apiGroups: ["discovery.k8s.io"]
   resources: [endpointslices]
   verbs: [get, list, watch]
+- apiGroups: ["coordination.k8s.io"]
+  resources: [leases]
+  verbs: [create, get, list, watch, update, patch]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
