Argo CD: ignore differences in NifiRegistryClient's status.version

--- a/charts/argo-cd/templates/argocd-configs/argocd-cm.yaml
+++ b/charts/argo-cd/templates/argocd-configs/argocd-cm.yaml
@@ -40,5 +40,8 @@ data:
   resource.customizations.ignoreDifferences.nifi.konpyutaika.com_NifiNodeGroupAutoscaler: |
     jsonPointers:
     - /spec/replicas
+  resource.customizations.ignoreDifferences.nifi.konpyutaika.com_NifiRegistryClient: |
+    jsonPointers:
+    - /status/version
   {{- include "argo-cd.config.cm" . | trim | nindent 2 }}
 {{- end }}
