--- a/charts/snapscheduler/templates/role-leader-election.yaml
+++ b/charts/snapscheduler/templates/role-leader-election.yaml
@@ -1,10 +1,10 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: {{ include "snapscheduler.fullname" . }}-leader-election
-  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "snapscheduler.labels" . | nindent 4 }}
+  name: {{.Values.k8sPrefix}}-role-{{.Values.customer}}-{{.Values.purpose}}-{{ include "snapscheduler.fullname" . }}-le-{{.Values.stage}}
+  namespace: {{ .Release.Namespace }}
 rules:
 - apiGroups:
   - ""
