--- a/charts/snapscheduler/templates/clusterrole-metrics-reader.yaml
+++ b/charts/snapscheduler/templates/clusterrole-metrics-reader.yaml
@@ -2,9 +2,9 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ include "snapscheduler.fullname" . }}-metrics-reader
   labels:
     {{- include "snapscheduler.labels" . | nindent 4 }}
+  name: {{.Values.k8sPrefix}}-clusterrole-{{.Values.customer}}-{{.Values.purpose}}-{{ include "snapscheduler.fullname" . }}-m-{{.Values.stage}}
 rules:
 - nonResourceURLs:
   - /metrics
