--- a/charts/snapscheduler/templates/clusterrole-proxy.yaml
+++ b/charts/snapscheduler/templates/clusterrole-proxy.yaml
@@ -2,9 +2,9 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ include "snapscheduler.fullname" . }}-proxy
   labels:
     {{- include "snapscheduler.labels" . | nindent 4 }}
+  name: {{.Values.k8sPrefix}}-clusterrole-{{.Values.customer}}-{{.Values.purpose}}-{{ include "snapscheduler.fullname" . }}-proxy-{{.Values.stage}}
 rules:
 - apiGroups:
   - authentication.k8s.io
