--- a/charts/snapscheduler/templates/clusterrole.yaml
+++ b/charts/snapscheduler/templates/clusterrole.yaml
@@ -1,9 +1,9 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ include "snapscheduler.fullname" . }}
   labels:
     {{- include "snapscheduler.labels" . | nindent 4 }}
+  name: {{.Values.k8sPrefix}}-clusterrole-{{.Values.customer}}-{{.Values.purpose}}-{{ include "snapscheduler.fullname" . }}-{{.Values.stage}}
 rules:
 - apiGroups:
   - ""
