--- a/charts/snapscheduler/templates/rolebinding.yaml
+++ b/charts/snapscheduler/templates/rolebinding.yaml
@@ -1,14 +1,14 @@
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: {{ include "snapscheduler.fullname" . }}
   labels:
     {{- include "snapscheduler.labels" . | nindent 4 }}
+  name: {{.Values.k8sPrefix}}-clusterrolebinding-{{.Values.customer}}-{{.Values.purpose}}-{{ include "snapscheduler.fullname" . }}-{{.Values.stage}}
 subjects:
 - kind: ServiceAccount
   name: {{ include "snapscheduler.serviceAccountName" . }}
   namespace: {{ .Release.Namespace }}
 roleRef:
   kind: ClusterRole
-  name: {{ include "snapscheduler.fullname" . }}
+  name: {{.Values.k8sPrefix}}-clusterrole-{{.Values.customer}}-{{.Values.purpose}}-{{ include "snapscheduler.fullname" . }}-{{.Values.stage}}
   apiGroup: rbac.authorization.k8s.io
