--- a/charts/snapscheduler/templates/service-metrics.yaml
+++ b/charts/snapscheduler/templates/service-metrics.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "snapscheduler.fullname" . }}-metrics
-  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "snapscheduler.labels" . | nindent 4 }}
+  name: {{.Values.k8sPrefix}}-svc-{{.Values.customer}}-{{.Values.purpose}}-{{ include "snapscheduler.fullname" . }}-m-{{.Values.stage}}
+  namespace: {{ .Release.Namespace }}
 spec:
   ports:
   - name: https
