--- a/charts/snapscheduler/values.yaml
+++ b/charts/snapscheduler/values.yaml
@@ -1,3 +1,8 @@
+k8sPrefix: awsd
+customer: hydra
+purpose: dataplatform
+stage: dev
+
 # replicaCount is the number of replicas of the snapscheduler operator to run.
 replicaCount: 1
 
@@ -8,8 +13,8 @@ image:
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
-nameOverride: ""
-fullnameOverride: ""
+nameOverride: "snapscheduler"
+fullnameOverride: "snapscheduler"
 
 rbacProxy:
   image:
@@ -59,12 +64,6 @@ nodeSelector:
 tolerations: []
 
 topologySpreadConstraints: []
-# - maxSkew: 1
-#   topologyKey: topology.kubernetes.io/zone
-#   whenUnsatisfiable: DoNotSchedule
-#   labelSelector:
-#     matchLabels:
-#       app.kubernetes.io/instance: snapscheduler
 
 affinity:
   podAntiAffinity:
@@ -72,16 +71,14 @@ affinity:
       - weight: 100
         podAffinityTerm:
           labelSelector:
-            matchExpressions:
-              - key: backube/snapscheduler-affinity
-                operator: In
-                values:
-                  - manager
-          topologyKey: kubernetes.io/hostname
+            matchLabels:
+              "app.kubernetes.io/name": "snapscheduler"
+              "app.kubernetes.io/instance": "snapscheduler"
+          topologyKey: "topology.kubernetes.io/zone"
 
 metrics:
   # Disable auth checks when scraping metrics (allow anyone to scrape)
-  disableAuth: false
+  disableAuth: true
 
 # See https://kubernetes.io/blog/2023/01/12/
 #        protect-mission-critical-pods-priorityclass/
