--- a/charts/tigera-operator/templates/tigera-operator/02-tigera-operator.yaml
+++ b/charts/tigera-operator/templates/tigera-operator/02-tigera-operator.yaml
@@ -86,6 +86,10 @@ spec:
                   fieldPath: metadata.namespace
             - name: TIGERA_OPERATOR_INIT_IMAGE_VERSION
               value: {{.Values.tigeraOperator.version}}
+            {{- if and .Values.tigeraOperator.awsAccountID (not (eq .Values.tigeraOperator.awsAccountID "")) }}
+            - name: AWS_ACCOUNT_ID
+              value: {{.Values.tigeraOperator.awsAccountID}}
+            {{- end }}
           envFrom:
             - configMapRef:
                 name: kubernetes-services-endpoint
