--- a/charts/newrelic-prometheus-agent/templates/externalsecret.yaml
+++ b/charts/newrelic-prometheus-agent/templates/externalsecret.yaml
@@ -1,7 +1,7 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: {{.Values.k8sPrefix}}-externalsecret-{{.Values.customer}}-{{.Values.purpose}}-{{ include "newrelic.common.naming.fullname" . }}-license-{{.Values.stage}}
+  name: {{.Values.k8sPrefix}}-es-{{.Values.customer}}-{{.Values.purpose}}-{{ include "newrelic.common.naming.fullname" . }}-license-{{.Values.stage}}
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "newrelic.common.labels" . | nindent 4 }}
@@ -14,7 +14,7 @@ spec:
   refreshInterval: 12h
   secretStoreRef:
     kind: ClusterSecretStore
-    name: {{.Values.k8sPrefix}}-clustersecretstore-{{.Values.customer}}-{{.Values.purpose}}-aws-secretsmanager-{{.Values.stage}}
+    name: {{.Values.k8sPrefix}}-css-{{.Values.customer}}-{{.Values.purpose}}-aws-secretsmanager-{{.Values.stage}}
   target:
     creationPolicy: Owner
     name: {{ include "newrelic.common.license.secretName" . }}
