--- a/charts/samlproxy/templates/secret-sp.yaml
+++ b/charts/samlproxy/templates/secret-sp.yaml
@@ -3,12 +3,12 @@ kind: ExternalSecret
 metadata:
   labels:
     {{- include "samlproxy.labels" . | nindent 4 }}
-  name: {{.Values.k8sPrefix}}-externalsecret-{{.Values.customer}}-{{.Values.purpose}}-{{ include "samlproxy.fullname" . }}-sp-{{.Values.stage}}
+  name: {{.Values.k8sPrefix}}-es-{{.Values.customer}}-{{.Values.purpose}}-{{ include "samlproxy.fullname" . }}-sp-{{.Values.stage}}
   namespace: {{ .Release.Namespace }}
 spec:
   refreshInterval: 12h
   secretStoreRef:
-    name: {{.Values.k8sPrefix}}-clustersecretstore-{{.Values.customer}}-{{.Values.purpose}}-aws-secretsmanager-{{.Values.stage}}
+    name: {{.Values.k8sPrefix}}-css-{{.Values.customer}}-{{.Values.purpose}}-aws-secretsmanager-{{.Values.stage}}
     kind: ClusterSecretStore
   target:
     name: {{.Values.k8sPrefix}}-secret-{{.Values.customer}}-{{.Values.purpose}}-{{ include "samlproxy.fullname" . }}-sp-{{.Values.stage}}
