--- a/charts/nifi-registry/templates/externalsecret.yaml
+++ b/charts/nifi-registry/templates/externalsecret.yaml
@@ -4,7 +4,7 @@ kind: ExternalSecret
 metadata:
   labels:
     {{- include "nifi-registry.labels" . | nindent 4 }}
-  name: {{.Values.k8sPrefix}}-externalsecret-{{.Values.customer}}-{{.Values.purpose}}-{{ include "nifi-registry.fullname" . }}-git-{{.Values.stage}}
+  name: {{.Values.k8sPrefix}}-es-{{.Values.customer}}-{{.Values.purpose}}-{{ include "nifi-registry.fullname" . }}-git-{{.Values.stage}}
   namespace: {{ .Release.Namespace }}
 spec:
   data:
@@ -15,7 +15,7 @@ spec:
   refreshInterval: 12h
   secretStoreRef:
     kind: ClusterSecretStore
-    name: {{.Values.k8sPrefix}}-clustersecretstore-{{.Values.customer}}-{{.Values.purpose}}-aws-secretsmanager-{{.Values.stage}}
+    name: {{.Values.k8sPrefix}}-css-{{.Values.customer}}-{{.Values.purpose}}-aws-secretsmanager-{{.Values.stage}}
   target:
     creationPolicy: Owner
     name: {{.Values.k8sPrefix}}-secret-{{.Values.customer}}-{{.Values.purpose}}-{{ include "nifi-registry.fullname" . }}-git-{{.Values.stage}}
